--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,9 @@ EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_USER=b3f5333bcc4659
 EMAIL_PASSWORD=1a3656a488e345
+
+
+
+NODE_ENV=development
+
+FRONTEND_URL=http://localhost:3000
