--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
+    "node": "^22.7.0",
     "nodemailer": "^6.9.14"
   }
 }
