--- a/server/.env
+++ b/server/.env
@@ -14,4 +14,4 @@ EMAIL_PASSWORD=1a3656a488e345
 
 NODE_ENV=development
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3000/reset-password.html
